--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,8 @@
 body {
 	margin: 0;
-	padding: 0;
+	padding: 0 5%;
 	font-family: 'Lato', sans-serif;
 	background-color: #80deea;
-}
-.app-container {
-	width: 60%;
-	margin: 0 auto;
-	text-align: center;
 }
 
 .main-header {
@@ -17,9 +12,39 @@ body {
 	display: -o-flex;
 	display: flex;
 	justify-content: space-between;
+	margin-top: 20px;
+}
+
+.app-container {
+	width: 60%;
+	margin: 0 auto;
+	text-align: center;
 }
 
 p.logo {
 	padding: 0;
 	margin: 0;
+}
+
+.btn {
+	background-color:#7892c2;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #4e6096;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:14px;
+	padding:10px 22px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #283966;
+}
+.btn:hover {
+	background-color:#476e9e;
+}
+.btn:active {
+	position:relative;
+	top:1px;
 }
